# verified-math

./: CMakeLists.txt
include/verified_math/: mat33.h  mat44.h  vec3.h  vec3.h~  vec4.h
src/main/: vec3.cpp  vec4.cpp
src/test/: test_mat33.cpp  test_mat44.cpp  test_vec3.cpp  test_vec3.cpp~  test_vec4.cpp
